--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "ccxt": "^4.0.110",
+        "dotenv": "^16.3.1"
+    }
 }
